--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
     "zustand": "^4.3.9"
+  },
+  "devDependencies": {
+    "prisma": "^5.1.1"
   }
 }
